--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,14 +1,14 @@
 *,
 *::after,
 *::before {
-   /* properties here are applied, not inherited */
-   margin: 0;
-   padding: 0;
-   box-sizing: inherit;
+	/* properties here are applied, not inherited */
+	margin: 0;
+	padding: 0;
+	box-sizing: inherit;
 }
 
 html {
-   font-size: 62.5%;
+	font-size: 62.5%;
 	// another way to do it
 	// @include respond-phone {
 	// 	font-size: 50%;
@@ -30,10 +30,21 @@ html {
 	// @include respond(big-desktop) {
 	// 	font-size: 75%; // 1rem = 12px, 12 / 16 = 75%
 	// }
-
 }
 
 body {
 	box-sizing: border-box;
-}
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	background: var(--magnolia);
+	padding: 4rem;
 
+	@media screen and (max-width: 43.5em) {
+		padding: 0;
+		flex-direction: column;
+		justify-content: space-between;
+		gap: 4rem;
+	}
+}
